trunk/Archive2/f4/5f22d89f8677c2/output
main.cpp:2:32: error: constexpr variable 'ptr' must be initialized by a constant expression
  static constexpr const void* ptr = reinterpret_cast<const void*>(0x1);
                               ^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:2:38: note: reinterpret_cast is not allowed in a constant expression
  static constexpr const void* ptr = reinterpret_cast<const void*>(0x1);
                                     ^
1 error generated.
