trunk/Archive2/f4/5f22d89f8677c2/main.cpp
struct foo {
  static constexpr const void* ptr = reinterpret_cast<const void*>(0x1);
};

auto main() -> int {
  return 0;
}
